# avatars

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt  wrangler.toml
.github/workflows/: cd.yml  deploy.yml  pages.yml  publish.yml  release.yml  tests.yml
.zed/: settings.json
app/: constants.py  main.py  validators.py
app/assets/: colors.json  expressions.json
app/lib/: svg.py  utils.py
app/middleware/: client_cache_middleware.py
app/routes/v1/: avatar.py
app/utils/: randomizer.py  svg.py
client/: biome.json  index.html  package-lock.json  package.json  vite.config.ts
client/src/: main.tsx
client/src/components/: code-block.test.tsx  code-block.tsx
client/src/components/sections/: playground.tsx
client/src/lib/: debounce.test.ts  debounce.ts
client/tests/: setup.ts
docs/: .env.example  .gitignore  index.html  package-lock.json  package.json
docs/src/: App.tsx  _data.ts  constants.ts  index.css  main.tsx  vite-env.d.ts
docs/src/components/: code-block.tsx  footer.tsx
docs/src/components/sections/: endpoints.tsx  playground.tsx  query-params.tsx
scripts/: package.py  package.sh
tests/: test_avatar.py
