[project]
name = "avatars"
version = "0.1.0"
description = "API for generating customizable SVG avatars with consistent seeds."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cairosvg>=2.8.2",
    "fastapi[standard]>=0.119.0",
]

[tool.pyright]
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportAny = "none"
