[project]
name = "avatars"
version = "0.1.0"
description = "API for generating customizable SVG avatars with consistent seeds."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["resvg-py>=0.2.6", "fastapi>=0.135.1", "mangum>=0.21.0"]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
reportMissingTypeStubs = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportAny = "none"

[dependency-groups]
dev = ["httpx>=0.28.1", "pytest>=8.4.2", "uvicorn[standard]>=0.41.0"]
